kubernetes-hello/k8s-showcase/case-static-web-with-ingress-plan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    type: ns
