kubernetes-hello/k8s-showcase/case-static-web-with-ingress-plan/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-world
  name: ingress-web
  labels:
    app: gui-web-vue
    tier: web
    env: debug
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: html-service
                port:
                  number: 8080
